--- a/Day01/src/main/webapp/resources/css/index.css
+++ b/Day01/src/main/webapp/resources/css/index.css
@@ -48,7 +48,7 @@ div input {
 }
 
 .primary {
-	margin-right: 10px;
+	margin : 0 5px 0 5px;
 }
 
 th {
@@ -211,10 +211,6 @@ em, i {
 	font-style: italic;
 }
 
-p {
-	margin: 0 0 2rem 0;
-}
-
 h1, h2, h3, h4, h5, h6 {
 	color: #ffffff;
 	font-weight: 600;
@@ -267,6 +263,10 @@ h6 {
 	font-size: 0.6rem;
 }
 
+p {
+	font-size: 1.5rem;
+}
+
 @media screen and (max-width: 736px) {
 	h1 {
 		font-size: 1.75rem;
@@ -275,6 +275,9 @@ h6 {
 	h2 {
 		font-size: 1.25em;
 		line-height: 1.5;
+	}
+	p {
+		font-size: 0.7rem;
 	}
 }
 
@@ -415,6 +418,7 @@ label {
 	margin: 0.4rem 0 0.2rem 0;
 	text-transform: uppercase;
 }
+
 /* alert창 대신 밑에 경고하기 label하고 div새로 */
 .myLabel {
 	color: #fff700;
@@ -487,13 +491,20 @@ form>.btnFields {
 }
 
 /* header 아래 미니메뉴 */
-header>.miniMenu {
-	font-size: 0.8rem;
+header>.miniMenu> a{
+	font-size: 0.7rem;
+	border: none;
+	align-content: center;
 }
 
-header>.miniMenu> a {
-	text-decoration: none;
+header>.miniMenu>#firstA {
+	margin : 0 5px 0 0;
 }
+
+header>.miniMenu> #lastA {
+	margin : 0 20px 0 5px;
+}
+
 input[type="text"], input[type="password"], input[type="email"], input[type="tel"],
 	select, textarea {
 	-moz-appearance: none;
@@ -1385,8 +1396,8 @@ body.is-preload #bg:before {
 #header .content p {
 	text-transform: uppercase;
 	letter-spacing: 0.2rem;
-	font-size: 0.8rem;
 	line-height: 2;
+	margin: 0 0 2rem 0;
 }
 
 #header nav ul {
