--- a/Day01/src/main/webapp/resources/board/css/main.css
+++ b/Day01/src/main/webapp/resources/board/css/main.css
@@ -3,6 +3,22 @@
 @import
 	url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:400,800,900")
 	;
+#editAfterBoard {
+	color: #afafaf;
+}
+#singleBoardTitleIg {
+	pointer-events: none;
+}
+
+#secondMain {
+	position: relative;
+	margin-top: 9.5em;
+}
+
+#showMyBoardBtn {
+	background-color: #d5d5d5e3;
+	color: black !important;
+}
 
 #showBoardUserName {
 	float: right;
@@ -40,6 +56,13 @@
 #boardTitle {
 	text-align: left !important;
 	width: 450px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+#boardTitle>a{
+	word-break: break-all;
+	white-space: nowrap;
 }
 
 #boardWriter {
@@ -257,6 +280,7 @@ body, input, select, textarea {
 	#sideBoardRegdate {
 		width: 350px;
 		text-align: right;
+		padding-right: 1.2em;
 	}
 }
 
@@ -291,6 +315,10 @@ body, input, select, textarea {
 }
 
 @media screen and (max-width: 1280px) {
+	ul.posts article header h3 {
+	width: 100% !important;
+}
+	
 	#showBoardUserName {
 		float: right;
 		border: none !important;
@@ -347,7 +375,7 @@ body, input, select, textarea {
 		color: #8080805e;
 	}
 	#sideBoardRegdate {
-		width: 350px;
+		width: 100%;
 		text-align: right;
 	}
 	body, input, select, textarea {
@@ -426,7 +454,6 @@ a {
 	-webkit-transition: color 0.2s ease, border-bottom-color 0.2s ease;
 	-ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
 	transition: color 0.2s ease, border-bottom-color 0.2s ease;
-	border-bottom: dotted 1px rgba(160, 160, 160, 0.65);
 	color: inherit;
 	text-decoration: none;
 }
@@ -1759,7 +1786,6 @@ hr.major {
 	-webkit-transition: border-bottom-color 0.2s ease;
 	-ms-transition: border-bottom-color 0.2s ease;
 	transition: border-bottom-color 0.2s ease;
-	border-bottom: dotted 1px rgba(160, 160, 160, 0.65);
 	display: block;
 	margin: 0 1.5em 0 0;
 }
@@ -1786,6 +1812,10 @@ hr.major {
 
 .blurb p {
 	font-size: 0.9em;
+}
+
+.blurb {
+	border: none !important;
 }
 
 /* Box */
@@ -1880,6 +1910,7 @@ input[type="submit"].large, input[type="reset"].large, input[type="button"].larg
 	button.large, .button.large {
 	font-size: 0.7em;
 	padding: 0 3em;
+	width: 140px;
 }
 
 input[type="submit"].small, input[type="reset"].small, input[type="button"].small,
@@ -2145,6 +2176,12 @@ input[type="radio"]+label:before {
 	text-decoration: none;
 	border-bottom: none;
 	position: relative;
+	/* a태그 무효화, 클릭 안되게함 */
+	pointer-events: none;
+}
+
+#clickHeart {
+	pointer-events: all;
 }
 
 .icon:before {
@@ -2436,6 +2473,7 @@ ul.icons li>* .label {
 ul.posts {
 	list-style: none;
 	padding: 0;
+	border-bottom: solid 1px rgba(160, 160, 160, 0.3);
 }
 
 ul.posts li {
@@ -2463,6 +2501,7 @@ ul.posts article {
 	-webkit-flex-direction: row-reverse;
 	-ms-flex-direction: row-reverse;
 	flex-direction: row-reverse;
+	margin: 2em 0;
 }
 
 ul.posts article .image {
@@ -2487,6 +2526,13 @@ ul.posts article header {
 ul.posts article header h3 {
 	font-size: 1em;
 	margin-top: 0.125em;
+	padding : 0 1.2em;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	width: 330px;
+}
+ul.posts article header h3>a {
+	white-space : nowrap;
 }
 
 ul.posts article header .published {
@@ -2591,6 +2637,7 @@ ul.posts article header>:last-child {
 	.mini-posts>:nth-child(-n+2) {
 		margin-top: 0;
 	}
+	
 }
 
 @media screen and (max-width: 480px) {
@@ -2615,6 +2662,7 @@ ul.posts article header>:last-child {
 	border: solid 1px rgba(160, 160, 160, 0.3);
 	margin: 4em 0 1em 0;
 	position: relative;
+	overflow: hidden;
 }
 
 .post>header {
@@ -2624,7 +2672,7 @@ ul.posts article header>:last-child {
 	display: flex;
 	border-bottom: solid 1px rgba(160, 160, 160, 0.3);
 	left: -3em;
-	margin: -3em 0 0.2em 0;
+	margin: -1.5em 0 0.2em 0;
 	position: relative;
 	width: calc(100% + 6em);
 }
@@ -2648,7 +2696,7 @@ ul.posts article header>:last-child {
 }
 
 .post>header .meta {
-	padding: 3.75em 3em 1.75em 3em;
+	padding: 3.75em 1em 1.75em 3em;
 	border-left: solid 1px rgba(160, 160, 160, 0.3);
 	min-width: 17em;
 	text-align: right;
@@ -2702,6 +2750,7 @@ ul.posts article header>:last-child {
 	-webkit-align-items: center;
 	-ms-align-items: center;
 	align-items: center;
+	float: right;
 }
 
 .post>footer .actions {
@@ -2822,7 +2871,7 @@ ul.posts article header>:last-child {
 	.post {
 		padding: 1.5em 1.5em 1.5em 1.5em;
 		left: -1.5em;
-		margin: 0 0 2em 0;
+		margin: 0;
 		width: calc(100% + ( 1.5em * 2));
 	}
 	.post>header {
@@ -2833,6 +2882,21 @@ ul.posts article header>:last-child {
 	}
 	.post>header .title h2 {
 		font-size: 1.1em;
+	}
+	#secondMain {
+		position: relative;
+		margin-top: 7.5em;
+	}
+}
+
+@media screen and (max-width:696px) {
+	#editAfterBoard {
+		display: none;
+	}
+	#editAfterBoard2 {
+		border: none;
+		padding : none;
+		margin: none;
 	}
 }
 
@@ -2852,7 +2916,7 @@ ul.posts article header>:last-child {
 		margin: 1em 0 0 0;
 		padding-left: 0;
 	}
-	.post>header .meta .author .name {
+	.post>header .meta .author .name{
 		display: none;
 	}
 	.post>.image.featured {
@@ -3232,12 +3296,14 @@ body.single #wrapper {
 
 #sidebar>#sidebarBody {
 	margin: 0;
-	padding: 2em 0;
+	padding: 0 !important;
+	background-color: white;
 }
 
 #sidebar>h3 {
 	text-align: center;
 	padding: 0.4em;
+	background-color: rgba(160, 160, 160, 0.3);
 }
 
 #sidebar>:first-child {
